--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ najlepiej bez zewnetrznych marginesow zeby sie nie rozjechalo po mergu
 branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
  -->
 
- <body>
+<body>
     <div id="nav">
 
         <!-- menu gorne -->
@@ -27,7 +27,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
     <div id="main">
 
-        <!-- funcke produktu -->
+        <!-- funkcje produktu -->
     </div>
 
     <div id="form">
