Basic html and css structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projekt Leniwców</title>
+    <link rel="stylesheet" type="text/css" href="nav.css">
 </head>
 
 <!-- ma byc na bazie https://www.lapa.ninja/post/callstack/ wg ustalen;
@@ -16,8 +17,13 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
 <body>
     <div id="nav">
-
-        <!-- menu gorne -->
+        <div class="logo">logo</div>
+        <div class="menu">
+            <div class="nav-item">hero</div>
+            <div class="nav-item">main</div>
+            <div class="nav-item">form</div>
+            <div class="nav-item">team</div>
+        </div>
     </div>
 
     <div id="hero">
