--- a/index.html
+++ b/index.html
@@ -40,6 +40,49 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
     <div id="team">
 
         <!-- czesc z zespolem -->
+
+        <div class="main-window">
+            <div class="team-top">
+                <div class="team-description">
+                    opis teamu
+                </div>
+
+                <div class="team-logo">
+                    logo teamu
+                </div>
+            </div>
+            <div class="team-bottom">
+                <div class="team-member">
+                    <div class="member-img-container"> img here plz </div>
+                    <div class="member-description"> opisik </div>
+                    <div class="member-links">
+                        linki itp
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="member-img-container"> img here plz </div>
+                    <div class="member-description"> opisik </div>
+                    <div class="member-links">
+                        linki itp
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="member-img-container"> img here plz </div>
+                    <div class="member-description"> opisik </div>
+                    <div class="member-links">
+                        linki itp
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="member-img-container"> img here plz </div>
+                    <div class="member-description"> opisik </div>
+                    <div class="member-links">
+                        linki itp
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <footer>
