--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <!-- czesc z zespolem -->
 
         <div class="main-window">
+
+            <!-- czesc gorna -->
             <div class="team-top">
                 <div class="team-description">
                     opis teamu
@@ -51,6 +53,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                     logo teamu
                 </div>
             </div>
+
+            <!-- czesc dolna -->
             <div class="team-bottom">
                 <div class="team-member">
                     <div class="member-img-container"> img here plz </div>
