stworzyłam szkielet hero i dodałam buttona

--- a/index.html
+++ b/index.html
@@ -20,29 +20,44 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <!-- menu gorne -->
     </div>
 
+
     <div id="hero">
 
-        <!-- sekcja hero -->
-    </div>
+        <div class="container-hero">
 
-    <div id="main">
+            <div class="left-hero">
+                <div class="text-hero"></div>
+                <div class="description"></div>
+            </div>
+            <div class="right">
+                <div class="animation"></div>
+                <div class="buttton">
+                         <input type="button" class="btn" value="Tu będzie odnośnik :)" /> </p>
+                </div>
+            </div>
 
-        <!-- funkcje produktu -->
-    </div>
+        </div>
 
-    <div id="form">
 
-        <!-- czesc z formularzem -->
-    </div>
 
-    <div id="team">
+        <div id="main">
 
-        <!-- czesc z zespolem -->
-    </div>
+            <!-- funkcje produktu -->
+        </div>
 
-    <footer>
-        <!-- nie wiem czy bedzie potrzebny ale jest  -->
-    </footer>
+        <div id="form">
+
+            <!-- czesc z formularzem -->
+        </div>
+
+        <div id="team">
+
+            <!-- czesc z zespolem -->
+        </div>
+
+        <footer>
+            <!-- nie wiem czy bedzie potrzebny ale jest  -->
+        </footer>
 
 </body>
 
