main-team klasa

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
         <!-- czesc z zespolem -->
 
-        <div class="main-window">
+        <div class="main-team">
 
             <!-- czesc gorna -->
             <div class="team-top">
@@ -85,7 +85,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 </div>
 
                 <div class="team-member">
-                    
+
                     <div class="member-img-container"> img here plz </div>
                     <div class="member-description"> opisik </div>
                     <div class="member-links">
