--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
     </div>
 
     <div id="main">
+        <div class= "container">
+            <div class="row">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
 
         <!-- funkcje produktu -->
     </div>
