--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
 <body>
     <div id="nav">
-        <div class="logo">logo</div>
+        <div class="logo">leniwce</div>
         <div class="menu">
-            <div class="nav-item">hero</div>
-            <div class="nav-item">main</div>
-            <div class="nav-item">form</div>
-            <div class="nav-item">team</div>
+            <a href="#hero" class="nav-item">hero</div>
+            <a href="#main" class="nav-item">main</div>
+            <a href="#form" class="nav-item">form</div>
+            <a href="#team" class="nav-item">team</div>
         </div>
     </div>
 
