--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projekt Leniwców</title>
+
+    <link rel="Stylesheet" type="text/css" href="hero.css" />
 </head>
 
 <!-- ma byc na bazie https://www.lapa.ninja/post/callstack/ wg ustalen;
@@ -25,7 +27,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
         <div class="container-hero">
 
-            <div class="left-hero">
+            <div class="left">
                 <div class="text-hero"></div>
                 <div class="description"></div>
             </div>
