Css styling href

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
     <div id="nav">
         <div class="logo">leniwce</div>
         <div class="menu">
-            <a href="#hero" class="nav-item">hero</div>
-            <a href="#main" class="nav-item">main</div>
-            <a href="#form" class="nav-item">form</div>
-            <a href="#team" class="nav-item">team</div>
+            <a href="#hero" class="nav-item">hero</a>
+            <a href="#main" class="nav-item">main</a>
+            <a href="#form" class="nav-item">form</a>
+            <a href="#team" class="nav-item">team</a>
         </div>
     </div>
 
