general layout done, ph img

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             <!-- czesc gorna -->
             <div class="team-top">
                 <div class="team-description">
-                    opis teamu
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel obcaecati itaque fugit nostrum laboriosam iusto dolore minus
+                    sed explicabo natus tempora molestiae, placeat, modi maiores praesentium nemo deleniti sint! Ea.
                 </div>
 
                 <div class="team-logo">
-                    logo teamu
+                    logo teamu lub smieszny obrazek
                 </div>
             </div>
 
@@ -59,8 +60,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <div class="member-img-container"> img here plz </div>
-                    <div class="member-description"> opisik </div>
+                    <img class="member-img-container" src="img/PH.png" />
+                    <h3 class="member-description"> Katarzyna Dzik </h3>
                     <div class="member-links">
                         linki itp
                     </div>
@@ -68,8 +69,9 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <div class="member-img-container"> img here plz </div>
-                    <div class="member-description"> opisik </div>
+                    <img class="member-img-container" src="img/PH.png" />
+                    <h3 class="member-description"> Paweł Jóźwiak </h3>
+
                     <div class="member-links">
                         linki itp
                     </div>
@@ -77,8 +79,9 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <div class="member-img-container"> img here plz </div>
-                    <div class="member-description"> opisik </div>
+                    <img class="member-img-container" src="img/PH.png" />
+                    <h3 class="member-description"> Joachim Orłowski </h3>
+
                     <div class="member-links">
                         linki itp
                     </div>
@@ -86,8 +89,9 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <div class="member-img-container"> img here plz </div>
-                    <div class="member-description"> opisik </div>
+                    <img class="member-img-container" src="img/PH.png" />
+                    <h3 class="member-description"> Remigiusz Mrotek </h3>
+
                     <div class="member-links">
                         linki itp
                     </div>
