--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <div class="container-hero">
 
             <div class="left">
-                <div class="text-hero"></div>
+                <div class="text"></div>
                 <div class="description"></div>
             </div>
             <div class="right">
