--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
 <body>
     <div id="nav">
-        <div class="logo">leniwce</div>
+        <a class="logo" href="https://placeholder.com"><img src="https://via.placeholder.com/150x30"></a>
         <div class="menu">
-            <a href="#hero" class="nav-item">hero</a>
-            <a href="#main" class="nav-item">main</a>
-            <a href="#form" class="nav-item">form</a>
-            <a href="#team" class="nav-item">team</a>
+            <a href="#hero" class="nav-item">Hero</a>
+            <a href="#main" class="nav-item">Main</a>
+            <a href="#form" class="nav-item">Form</a>
+            <a href="#team" class="nav-item">Team</a>
         </div>
     </div>
 
