left side of page set up

--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <div class="container-hero">
 
             <div class="left">
-                <div class="text"></div>
+                <div class="text">Tu będzie jakiś super chtyliwy tekst! Work hard & have fun! whatever!
+                </div>
                 <div class="description"></div>
             </div>
             <div class="right">
                 <div class="animation"></div>
                 <div class="buttton">
-                         <input type="button" class="btn" value="Tu będzie odnośnik :)" /> </p>
-                </div>
-            </div>
-
-        </div>
+                         <input type="button" class="btn" value="Tu będzie odnośnik :)" /> </p></div>
+            </div>        
+        <div>
 
 
 
