stylizacje, ikony,  animacje

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+
+
 
     <title>Projekt Leniwców</title>
 </head>
@@ -61,39 +65,67 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 <div class="team-member">
 
                     <img class="member-img-container" src="img/PH.png" />
-                    <h3 class="member-description"> Katarzyna Dzik </h3>
+                    <h3 class="member-description">
+                        Katarzyna <br> Dzik
+                    </h3>
                     <div class="member-links">
-                        linki itp
+                        <a href="#" target="_blank">
+                            <i class="fab fa-github-square"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
                     </div>
                 </div>
 
                 <div class="team-member">
 
                     <img class="member-img-container" src="img/PH.png" />
-                    <h3 class="member-description"> Paweł Jóźwiak </h3>
+                    <h3 class="member-description">
+                        Paweł <br>Jóźwiak 
+                    </h3>
 
                     <div class="member-links">
-                        linki itp
+                        <a href="#" target="_blank">
+                            <i class="fab fa-github-square"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
                     </div>
                 </div>
 
                 <div class="team-member">
 
                     <img class="member-img-container" src="img/PH.png" />
-                    <h3 class="member-description"> Joachim Orłowski </h3>
+                    <h3 class="member-description">
+                        Joachim <br>Orłowski
+                    </h3>
 
                     <div class="member-links">
-                        linki itp
+                        <a href="#" target="_blank">
+                            <i class="fab fa-github-square"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
                     </div>
                 </div>
 
                 <div class="team-member">
 
                     <img class="member-img-container" src="img/PH.png" />
-                    <h3 class="member-description"> Remigiusz Mrotek </h3>
+                    <h3 class="member-description">
+                        Remigiusz <br>Mrotek
+                    </h3>
 
                     <div class="member-links">
-                        linki itp
+                        <a href="#" target="_blank">
+                            <i class="fab fa-github-square"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
                     </div>
                 </div>
 
