--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projekt Leniwców</title>
+    <link rel="stylesheet" href="form.css">
 </head>
 
 <!-- ma byc na bazie https://www.lapa.ninja/post/callstack/ wg ustalen;
@@ -32,12 +33,23 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
     <div id="form">
 
-        <!-- czesc z formularzem -->
+        
     </div>
 
     <div id="team">
-
-        <!-- czesc z zespolem -->
+        <div class="form-container">
+            <div class="form">
+                    <form>
+                        <div class="form-input">
+                            <label for="uname">Choose a username: </label>
+                            <input type="text" id="uname" name="name" placeholder="Lower case, all one word"size="30">
+                        </div>
+                        <div class="form-btn">
+                            <button>Submit</button>
+                        </div>
+                </form>
+            <div>
+        </div>
     </div>
 
     <footer>
@@ -47,3 +59,6 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 </body>
 
 </html>
+
+
+
