--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <div class="container-hero">
 
             <div class="left">
-                <div class="text">Tu będzie jakiś super chtyliwy tekst! Work hard & have fun! whatever!
+                <div class="text">
+                    <h1>Tu będzie jakiś super chwytliwy tekst! </br> Work hard & have fun! </br> whatever! </h1>
                 </div>
                 <div class="description">Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. </div>
             </div>
             <div class="right">
                 <div class="animation">ANIMACJA!!!</div>
                 <div class="buttton">
-                         <input type="button" class="btn" value="Tu będzie odnośnik :)" /> </p></div>
+                    <a href="www.my.com" title="Odnośnik" class="button"></a>
+                </div>
+        
+                         
             </div>        
         <div>
 
