--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="team.css">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="team.css">
 
 
 
@@ -50,7 +51,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             <!-- czesc gorna -->
             <div class="team-top">
                 <div class="team-description">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel obcaecati itaque fugit nostrum laboriosam iusto dolore minus
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel obcaecati itaque fugit nostrum
+                    laboriosam iusto dolore minus
                     sed explicabo natus tempora molestiae, placeat, modi maiores praesentium nemo deleniti sint! Ea.
                 </div>
 
@@ -82,7 +84,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                     <img class="member-img-container" src="img/PH.png" />
                     <h3 class="member-description">
-                        Paweł <br>Jóźwiak 
+                        Paweł <br>Jóźwiak
                     </h3>
 
                     <div class="member-links">
