--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="team.css">
@@ -57,7 +57,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 </div>
 
                 <div class="team-logo">
-                    logo teamu lub smieszny obrazek
+                    <img src="img/slotherin.jpg" class="team-logo-img">
                 </div>
             </div>
 
