--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             </div>
 
             <div class="right">    
-                    <div class="animation">
-                        <img src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!" height="350px" width="600px;" alt="fotka"/></div>          
+                    <!-- <div class="animation"> Treść komentarza -->
+                        <img src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!" height="350px" width="600px;" alt="fotka"/><!-- </div>   -->       
                 <div class="odnosnik"> 
                     <p><a href="www.my.com" title="Odnośnik"> Odnośnik :) </a></p> 
                 </div>
