--- a/index.html
+++ b/index.html
@@ -31,38 +31,42 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 <div class="text">
                     <h1>Tu będzie jakiś super chwytliwy tekst! </br> Work hard & have fun! </br> whatever! </h1>
                 </div>
-                <div class="description">Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. </div>
-                <div class="odnosnik"> 
-                        <p><a href="www.my.com" title="Odnośnik"> Odnośnik :) </a></p> 
-                    </div>
+                <div class="description">Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle
+                    poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia
+                    tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym,
+                    pozostając praktycznie niezmienionym. </div>
+                <div class="odnosnik">
+                        <a href="#"><b>OUR TEAM</b></a>
+                </div>
             </div>
-            
-            <div class="right">    
-                        <img src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!"  alt="fotka"/>    
-                
-            </div>        
-        <div>
+
+            <div class="right">
+                <img src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!"
+                    alt="fotka" />
+
+            </div>
+            <div>
 
 
 
-        <div id="main">
+                <div id="main">
 
-            <!-- funkcje produktu -->
-        </div>
+                    <!-- funkcje produktu -->
+                </div>
 
-        <div id="form">
+                <div id="form">
 
-            <!-- czesc z formularzem -->
-        </div>
+                    <!-- czesc z formularzem -->
+                </div>
 
-        <div id="team">
+                <div id="team">
 
-            <!-- czesc z zespolem -->
-        </div>
+                    <!-- czesc z zespolem -->
+                </div>
 
-        <footer>
-            <!-- nie wiem czy bedzie potrzebny ale jest  -->
-        </footer>
+                <footer>
+                    <!-- nie wiem czy bedzie potrzebny ale jest  -->
+                </footer>
 
 </body>
 
