--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             <div class="form">
                     <form>
                         <div class="form-input">
-                            <label for="uname">Choose a username: </label>
-                            <input type="text" id="uname" name="name" placeholder="Lower case, all one word"size="30">
+                            <label for="uname">E-mail: </label>
+                            <input type="text" id="uname" name="name" placeholder="your@email.com"size="30">
                         </div>
                         <div class="form-btn">
                             <button>Submit</button>
