--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
     <div id="team">
         <div class="form-container">
             <div class="form">
-                    <form>
-                        <div class="form-input">
-                            <label for="uname">E-mail: </label>
-                            <input type="text" id="uname" name="name" placeholder="your@email.com"size="30">
-                        </div>
-                        <div class="form-btn">
-                            <button>Submit</button>
-                        </div>
+                <form>
+                    <div class="form-input">
+                        <label for="uname">E-mail: </label>
+                        <input type="text" id="uname" name="name" placeholder="Your@email.com"size="30">
+                    </div>
+                    <div class="form-btn">
+                        <button>Submit</button>
+                    </div>
                 </form>
             <div>
         </div>
