--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="team.css">
 
 
 
@@ -16,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="nav.css">
 
     <link rel="Stylesheet" type="text/css" href="hero.css" />
+    <link rel="stylesheet" href="team.css">
+
 </head>
 
 <!-- ma byc na bazie https://www.lapa.ninja/post/callstack/ wg ustalen;
@@ -54,7 +55,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             </div>
 
             <div class="right">
-                <img src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!"
+                <img class="hero-img" src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!"
                     alt="fotka" />
 
             </div>
