--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
 <body>
     <div id="nav">
-        <a class="logo" href="https://placeholder.com"><img src="https://via.placeholder.com/150x30"></a>
+    <img class="logo" src="img/mini logo.png" ></a>
+        
         <div class="menu">
             <a href="#hero" class="nav-item">Hero</a>
             <a href="#main" class="nav-item">Main</a>
