add landing page icon; kasia, pawel links done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                     tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym,
                     pozostając praktycznie niezmienionym. </div>
                 <div class="odnosnik">
-                        <a href="#"><b>OUR TEAM</b></a>
+                    <a href="#"><b>OUR TEAM</b></a>
                 </div>
             </div>
 
@@ -95,15 +95,18 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <img class="member-img-container" src="img/PH.png" />
+                    <img class="member-img-container" src="img/kasia.jpg" />
                     <h3 class="member-description">
                         Katarzyna <br> Dzik
                     </h3>
                     <div class="member-links">
-                        <a href="#" target="_blank">
+                        <a href="https://kmdzik.github.io/" title="Landing Page" target="_blank">
+                            <i class="far fa-id-card"></i>
+                        </a>
+                        <a href="https://github.com/KMDzik" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="https://www.linkedin.com/in/katarzyna-dzik-956902a2/" title="LinkedIn" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -111,16 +114,19 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <img class="member-img-container" src="img/PH.png" />
+                    <img class="member-img-container" src="img/pawel.jpeg" />
                     <h3 class="member-description">
                         Paweł <br>Jóźwiak
                     </h3>
 
                     <div class="member-links">
-                        <a href="#" target="_blank">
+                        <a href="https://paweljozwiak1986.github.io/" title="Landing Page" target="_blank">
+                            <i class="far fa-id-card"></i>
+                        </a>
+                        <a href="https://github.com/PawelJozwiak1986" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="https://www.linkedin.com/in/pawe%C5%82-j%C3%B3%C5%BAwiak-78a12016b/" title="LinkedIn" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -134,10 +140,13 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                     </h3>
 
                     <div class="member-links">
-                        <a href="#" target="_blank">
+                        <a href="#" title="Landing Page" target="_blank">
+                            <i class="far fa-id-card"></i>
+                        </a>
+                        <a href="#" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="#" title="LinkedIn" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -151,10 +160,13 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                     </h3>
 
                     <div class="member-links">
-                        <a href="#" target="_blank">
+                        <a href="#" title="Landing Page" target="_blank">
+                            <i class="far fa-id-card"></i>
+                        </a>
+                        <a href="#" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="#" title="LinkedIn" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
