links and img at remek

--- a/index.html
+++ b/index.html
@@ -154,19 +154,19 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <img class="member-img-container" src="img/PH.png" />
+                    <img class="member-img-container" src="img/remek.jpg" />
                     <h3 class="member-description">
                         Remigiusz <br>Mrotek
                     </h3>
 
                     <div class="member-links">
-                        <a href="#" title="Landing Page" target="_blank">
+                        <a href="https://rmrotek.github.io/" title="Landing Page" target="_blank">
                             <i class="far fa-id-card"></i>
                         </a>
-                        <a href="#" title="Github" target="_blank">
+                        <a href="https://github.com/rmrotek" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="#" title="LinkedIn" target="_blank">
+                        <a href="https://www.linkedin.com/in/remigiusz-mrotek-37588916a/" title="LinkedIn" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
