--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                         <button>Submit</button>
                     </div>
                 </form>
-            <div>
+            </div>
         </div>
         
     </div>
