--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 <form>
                     <div class="form-input">
                         <label for="uname">E-mail: </label>
-                        <input type="text" id="uname" name="name" placeholder="Your@email.com"size="30">
+                        <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
                         <button>Submit</button>
@@ -81,11 +81,11 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 </form>
             </div>
         </div>
-        
+
     </div>
 
     <div id="team">
-       <!-- czesc z zespolem -->
+        <!-- czesc z zespolem -->
         <div class="main-team">
 
             <!-- czesc gorna -->
@@ -137,7 +137,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                         <a href="https://github.com/PawelJozwiak1986" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/pawe%C5%82-j%C3%B3%C5%BAwiak-78a12016b/" title="LinkedIn" target="_blank">
+                        <a href="https://www.linkedin.com/in/pawe%C5%82-j%C3%B3%C5%BAwiak-78a12016b/" title="LinkedIn"
+                            target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -149,7 +150,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                     <h3 class="member-description">
                         Joachim <br>Orłowski
                     </h3>
-
+                    <!-- linki i profilowka! -->
                     <div class="member-links">
                         <a href="#" title="Landing Page" target="_blank">
                             <i class="far fa-id-card"></i>
@@ -194,6 +195,3 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 </body>
 
 </html>
-
-
-
