hero class fixes and document formatting

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
 <body>
     <div id="nav">
-    <img class="logo" src="img/mini logo.png" ></a>
-        
+        <img class="logo" src="img/mini logo.png"></a>
+
         <div class="menu">
             <a href="#hero" class="nav-item">Hero</a>
             <a href="#main" class="nav-item">Main</a>
@@ -40,22 +40,24 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
     <div id="hero">
 
-        <div class="container-hero">
+        <div class="hero-container">
 
-            <div class="left">
-                <div class="text">
+            <div class="hero-left">
+                <div class="hero-text">
                     <h1>Tu będzie jakiś super chwytliwy tekst! </br> Work hard & have fun! </br> whatever! </h1>
                 </div>
-                <div class="description">Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle
+                <div class="hero-description">Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w
+                    przemyśle
                     poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia
                     tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym,
-                    pozostając praktycznie niezmienionym. </div>
-                <div class="odnosnik">
+                    pozostając praktycznie niezmienionym.
+                </div>
+                <div class="hero-button">
                     <a href="#"><b>OUR TEAM</b></a>
                 </div>
             </div>
 
-            <div class="right">
+            <div class="hero-right">
                 <img class="hero-img" src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!"
                     alt="fotka" />
 
@@ -74,7 +76,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 <form>
                     <div class="form-input">
                         <label for="uname">E-mail: </label>
-                        <input type="text" id="uname" name="name" placeholder="Your@email.com"size="30">
+                        <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
                         <button>Submit</button>
@@ -82,11 +84,11 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 </form>
             </div>
         </div>
-        
+
     </div>
 
     <div id="team">
-       <!-- czesc z zespolem -->
+        <!-- czesc z zespolem -->
         <div class="main-team">
 
             <!-- czesc gorna -->
@@ -138,7 +140,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                         <a href="https://github.com/PawelJozwiak1986" title="Github" target="_blank">
                             <i class="fab fa-github-square"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/pawe%C5%82-j%C3%B3%C5%BAwiak-78a12016b/" title="LinkedIn" target="_blank">
+                        <a href="https://www.linkedin.com/in/pawe%C5%82-j%C3%B3%C5%BAwiak-78a12016b/" title="LinkedIn"
+                            target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
@@ -195,6 +198,3 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 </body>
 
 </html>
-
-
-
