changing our team button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                     pozostając praktycznie niezmienionym.
                 </div>
                 <div class="hero-button">
-                    <a href="#"><b>OUR TEAM</b></a>
+                    <a class="hero-button__color" href="#"><b>OUR TEAM</b></a>
                 </div>
             </div>
 
