adding class form-text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             <div class="form">
                 <form>
                     <div class="form-input">
-                        <label for="uname">E-mail: </label>
+                        <div class="form-text">STAY IN TOUCH</div>
+                        <div class="form-text2">Został po raz pierwszy użyty w XV w. <br> przez nieznanego drukarza <br>
+                            
+                        </div>
                         <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
