update joahim jpg, start scripts.js

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
 <body>
     <div id="nav">
-    <img class="logo" src="img/mini logo.png" ></a>
-        
+        <img class="logo" src="img/mini logo.png"></a>
+
         <div class="menu">
             <a href="#hero" class="nav-item">Hero</a>
             <a href="#main" class="nav-item">Main</a>
@@ -147,7 +147,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
 
                 <div class="team-member">
 
-                    <img class="member-img-container" src="img/PH.png" />
+                    <img class="member-img-container" src="img/joachim.jpg" />
                     <h3 class="member-description">
                         Joachim <br>Orłowski
                     </h3>
@@ -193,6 +193,8 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <!-- nie wiem czy bedzie potrzebny ale jest  -->
     </footer>
 
+    
+    <script src="scripts.js"></script>
 </body>
 
 </html>
