fix: button form no longer refresh page

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
                 <form>
                     <div class="form-input">
                         <label for="uname">E-mail: </label>
-                        <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
+                        <input type="text" id="uname" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
-                        <button>Submit</button>
+                        <button type="button">Submit</button>
                     </div>
                 </form>
             </div>
@@ -193,7 +193,7 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <!-- nie wiem czy bedzie potrzebny ale jest  -->
     </footer>
 
-    
+
     <script src="scripts.js"></script>
 </body>
 
