--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="nav.css">
     <link rel="Stylesheet" href="hero.css">
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="footer.css">
 
 </head>
 
@@ -193,7 +194,10 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
     </div>
 
     <footer>
-        <!-- nie wiem czy bedzie potrzebny ale jest  -->
+        <div class="footer">
+            <div class="footer-text">Copyright © 2018 Z-leniwce team Meet 3City</div>
+            
+        </div>
     </footer>
 
 </body>
