--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
             </div>
 
             <div class="hero-right">
-                <img class="hero-img" src="https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1066&q=80ANIMACJA!!!"
-                    alt="fotka" />
-
+                <img class="bottom image-bottom" src="img/gdansk.jpg" />
+                <img class="middle" src="img/sopot.jpg" />
+                <img class="top image-top" src="img/gdynia.jpg" />
             </div>
         </div>
     </div>
@@ -196,6 +196,23 @@ branche (nazwy) najlepiej wg id sekcji nad ktora bedziecie pracowac
         <!-- nie wiem czy bedzie potrzebny ale jest  -->
     </footer>
 
+    <script>
+        var images;
+        var iterator = 0;
+        function changeImage(){
+            if( iterator + 1 >= images.length ){ iterator = 0; }else{ iterator++; }
+            document.querySelector('.hero-right img.image-bottom').classList.remove('image-bottom');
+console.log( iterator, images[iterator])
+            var current = document.querySelector('.hero-right img.image-top');
+            current.classList.remove('image-top');
+            current.classList.add('image-bottom');
+            images[iterator].classList.add('image-top');
+        }
+        (function(){
+            images = document.querySelectorAll('.hero-right img');
+            // setInterval( changeImage, 5000 );
+        }());
+    </script>
 </body>
 
 </html>
