--- a/index.html
+++ b/index.html
@@ -44,13 +44,11 @@
 
             <div class="hero-left">
                 <div class="hero-text">
-                    <h1>Tu będzie jakiś super chwytliwy tekst! </br> Work hard & have fun! </br> whatever! </h1>
+                    <h1> Laziness Radar </h1></br> <h2>for people looking for things to do when they do not want to do a thing </h2>
                 </div>
-                <div class="hero-description">Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w
-                    przemyśle
-                    poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia
-                    tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym,
-                    pozostając praktycznie niezmienionym.
+                <div class="hero-description">a) Laziness filter - you can find places, events and food based on your level of laziness. If you are too lazy to set it up we can set it up at 100% for you.
+                    b) Companion matcher - if you want to do nothing together with a fellow sloth.
+                    c) Idea hub - bring your ideas about what to do instead of real work and let other be inspired by your genious.
                 </div>
                 <div class="hero-button">
                     <a class="hero-button__color" href="#"><b>OUR TEAM</b></a>
