fixes = text  in form

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <form>
                     <div class="form-input">
                         <div class="form-text">STAY IN TOUCH</div>
-                        <div class="form-text2">Został po raz pierwszy użyty w XV w. <br> przez nieznanego drukarza <br>
+                        <div class="form-text2">You can leave your e-mail here <br>to let us let you know about our<br>app first release.
                             
                         </div>
                         <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
