media query css added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Projekt Leniwców</title>
 
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="project.desktop.css" media="(min-width: 1000px)">
+
 
 
 </head>
@@ -35,7 +37,7 @@
 
             <div class="hero-left">
                 <div class="hero-text">
-                    <h1> Laziness Radar </h1></br> <h2>for people looking for things to do when they do not want to do a thing </h2>
+                    <h1> Laziness Radar </h1><br> <h2>for people looking for things to do when they do not want to do a thing </h2>
                 </div>
                 <div class="hero-description">a) Laziness filter - you can find places, events and food based on your level of laziness. If you are too lazy to set it up we can set it up at 100% for you.
                     b) Companion matcher - if you want to do nothing together with a fellow sloth.
