--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
             <div class="main-box">
                 <div class="main-column">
                     <div class="main-icon"> <img src="img/time.svg" alt="ikona" /></div>
-                    <div class="main-text">Laziness filter - you can find places, events and food based on your level
+                    <div class="main-text">Laziness filter </br></br> you can find places, events and food based on your level
                         of laziness. If you are too lazy to set it up we can set it up at 100% for you. </div>
                 </div>
 
                 <div class="main-column">
                     <div class="main-icon"> <img src="img/user.svg" alt="ikona" /></div>
-                    <div class="main-text">Companion matcher - if you want to do nothing together with a fellow sloth.</div>
+                    <div class="main-text">Companion matcher </br></br>if you want to do nothing together with a fellow sloth.</div>
                 </div>
 
                 <div class="main-column">
                     <div class="main-icon"> <img src="img/bulb.svg" alt="ikona" /></div>
-                    <div class="main-text">Idea hub - bring your ideas about what to do instead of real work and let
+                    <div class="main-text">Idea hub </br></br> bring your ideas about what to do instead of real work and let
                         other be inspired by your genious.</div>
                 </div>
             </div>
