adding hero-text__small

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
             <div class="hero-left">
                 <div class="hero-text">
-                    <div class="hero-text__big"> Laziness Radar </h1><br> <h2>for people looking for things to do when they do not want to do a thing </h2>
+                    <div class="hero-text__big"> Laziness Radar </div>
+                    <div class="hero-text__small">for people looking for things to do when they do not want to do a thing</div>
                 </div>
                 
                 <div class="hero-button">
